# QR-Code-Void-Generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  layout_config.ini  main.py  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml
core/: config.py  generator.py  logger.py  logo_handler.py  payloads.py  utils.py  worker.py
tests/: test_email_payload.py  test_payloads.py
ui/: components.py  main_window.py  styles.py
