[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "void-qrcode-generator"
version = "1.0.0"
description = "Gerador de QR Code personalizado com interface gráfica e tema Dracula"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "qrcode[pil]>=7.4.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]
